Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37100

Crashes when SPDY is enabled in QtWebKit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0 Beta1
    • 5.3.0 Alpha
    • Network: HTTP, WebKit
    • None
    • 1e29bf5b07ef60b8a8c14915bc3bcce4209b04ef

    Description

      If SPDY is enabled in QtWebKit (by modifying sources). It will crash on a number of webpages.

      Example crash from facebook.com:
      #0 QSpdyProtocolHandler::replyFinishedWithError (this=this@entry=0x7fff482e5f70, httpReply=httpReply@entry=0x0, streamID=streamID@entry=3,
      errorCode=QNetworkReply::ProtocolFailure, errorMessage=0x7fff48360b78 "SPDY stream is not active") at access/qspdyprotocolhandler.cpp:1256
      #1 0x00007fffef53a58d in QSpdyProtocolHandler::handleRST_STREAM (this=this@entry=0x7fff482e5f70, length=length@entry=8, frameData=...)
      at access/qspdyprotocolhandler.cpp:1006
      #2 0x00007fffef53d683 in QSpdyProtocolHandler::handleControlFrame (this=0x7fff482e5f70, frameHeaders=...) at access/qspdyprotocolhandler.cpp:830
      #3 0x00007fffef53dadd in QSpdyProtocolHandler::_q_receiveReply (this=0x7fff482e5f70) at access/qspdyprotocolhandler.cpp:346
      #4 0x00007fffef53510a in _q_readyRead (this=<optimized out>) at access/qhttpnetworkconnectionchannel.cpp:218
      #5 QHttpNetworkConnectionChannel::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>)
      at .moc/moc_qhttpnetworkconnectionchannel_p.cpp:116
      #6 0x00007fffeea6692e in QMetaObject::activate (sender=sender@entry=0x7fff48252ee0, signalOffset=<optimized out>,
      local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3682
      #7 0x00007fffeea66e87 in QMetaObject::activate (sender=sender@entry=0x7fff48252ee0, m=m@entry=0x7fffeee7cb60 <QIODevice::staticMetaObject>,
      local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3548
      #8 0x00007fffeead0ad0 in QIODevice::readyRead (this=this@entry=0x7fff48252ee0) at .moc/moc_qiodevice.cpp:153
      #9 0x00007fffef5dbfd5 in QSslSocketBackendPrivate::transmit (this=0x7fff4828dd60) at ssl/qsslsocket_openssl.cpp:945
      #10 0x00007fffef5d5f29 in QSslSocket::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>)
      at .moc/moc_qsslsocket.cpp:156
      #11 0x00007fffeea6692e in QMetaObject::activate (sender=sender@entry=0x7fff480f5b00, signalOffset=<optimized out>,
      local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3682
      #12 0x00007fffeea66e87 in QMetaObject::activate (sender=sender@entry=0x7fff480f5b00, m=m@entry=0x7fffeee7cb60 <QIODevice::staticMetaObject>,
      local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3548
      #13 0x00007fffeead0ad0 in QIODevice::readyRead (this=this@entry=0x7fff480f5b00) at .moc/moc_qiodevice.cpp:153
      #14 0x00007fffef5aeb98 in QAbstractSocketPrivate::canReadNotification (this=0x7fff4828e500) at socket/qabstractsocket.cpp:739
      #15 0x00007fffef5bc361 in QReadNotifier::event (this=<optimized out>, e=<optimized out>) at socket/qnativesocketengine.cpp:1147
      #16 0x00007ffff002178c in QApplicationPrivate::notify_helper (this=this@entry=0x640ac0, receiver=receiver@entry=0x7fff48252340, e=e@entry=0x7fff4d815b30)
      at kernel/qapplication.cpp:3519
      #17 0x00007ffff00268ae in QApplication::notify (this=0x7fffffffdfb0, receiver=0x7fff48252340, e=0x7fff4d815b30) at kernel/qapplication.cpp:3269
      #18 0x00007fffeea3f41d in QCoreApplication::notifyInternal (this=0x7fffffffdfb0, receiver=0x7fff48252340, event=event@entry=0x7fff4d815b30)
      at kernel/qcoreapplication.cpp:937
      #19 0x00007fffeea8ccdf in sendEvent (event=0x7fff4d815b30, receiver=<optimized out>)
      at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:238
      #20 socketNotifierSourceDispatch (source=source@entry=0x7fff48001340) at kernel/qeventdispatcher_glib.cpp:109
      #21 0x00007ffff5cdff25 in g_main_dispatch (context=0x7fff48000990) at /tmp/buildd/glib2.0-2.36.1/./glib/gmain.c:3054
      #22 g_main_context_dispatch (context=context@entry=0x7fff48000990) at /tmp/buildd/glib2.0-2.36.1/./glib/gmain.c:3630
      #23 0x00007ffff5ce0268 in g_main_context_iterate (context=context@entry=0x7fff48000990, block=block@entry=1, dispatch=dispatch@entry=1,
      self=<optimized out>) at /tmp/buildd/glib2.0-2.36.1/./glib/gmain.c:3701
      #24 0x00007ffff5ce0324 in g_main_context_iteration (context=0x7fff48000990, may_block=1) at /tmp/buildd/glib2.0-2.36.1/./glib/gmain.c:3762
      #25 0x00007fffeea8c22c in QEventDispatcherGlib::processEvents (this=0x7fff480008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
      #26 0x00007fffeea3e11b in QEventLoop::exec (this=this@entry=0x7fff4d815d20, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
      #27 0x00007fffee85447a in QThread::exec (this=<optimized out>) at thread/qthread.cpp:511
      #28 0x00007fffee8589a3 in QThreadPrivate::start (arg=0xd621f0) at thread/qthread_unix.cpp:345
      #29 0x00007fffee351e0e in start_thread (arg=0x7fff4d816700) at pthread_create.c:311
      #30 0x00007fffed31895d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:113

      Attachments

        For Gerrit Dashboard: QTBUG-37100
        # Subject Branch Project Status CR V

        Activity

          People

            allan.jensen Allan Sandfeld Jensen
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes