Do not assume nice behavior in error handling

SPDY is currently assuming it will only receive RST_STREAM messages on
active steams. This is however not always a safe assumption.

Task-number: QTBUG-37100
Change-Id: Ied89a68a209891992ad72daa513066efc1d7c421
Reviewed-by: Peter Hartmann <phartmann@blackberry.com>

cregit: 1e29bf5b07ef60b8a8c14915bc3bcce4209b04ef https://github.com/qt/qtbase/commit/1e29bf5b07ef60b8a8c14915bc3bcce4209b04ef